# medical-agent

./: .gitignore  README.md
backend/: .env.example  README.md  agent.py  main.py  pyproject.toml
backend/agents/: __init__.py  base.py  emergency.py  general.py  router.py
backend/api/routes/: chat.py  health.py
backend/config/: settings.py
backend/referenceFiles/: common_symptoms.md  department_guide.md  disclaimer_and_guidelines.md  drug_guide.md  emergency_guide.md
backend/schemas/: chat.py
backend/tools/: registry.py  search_drug.py  search_emergency.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: chat.ts
frontend/src/components/: ChatBubble.vue
frontend/src/stores/: chat.ts
frontend/src/types/: chat.ts
frontend/src/views/: ChatView.vue
