[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.0",
    "pydantic-settings>=2.8.1",
    "python-multipart>=0.0.29",
    "uvicorn>=0.47.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
